RESOLVED FIXED22141
REGRESSION: Safari error page is not fully styled when loaded from cache
https://bugs.webkit.org/show_bug.cgi?id=22141
Summary REGRESSION: Safari error page is not fully styled when loaded from cache
mitz
Reported 2008-11-08 12:06:49 PST
Steps to reproduce: 1) Go to http://no-such.topleveldomain/ 2) Reload the error page 3) Close the window (and any other open error pages), open the Caches window and empty the WebCore cache 4) Go to the URL again Results: When loaded from the cache, the page is not style correctly: the error message at the top is not centered and is missing the rounded rect border.
Attachments
patch (4.05 KB, patch)
2008-11-08 17:21 PST, Antti Koivisto
sam: review+
mitz
Comment 1 2008-11-08 12:07:37 PST
Antti Koivisto
Comment 2 2008-11-08 15:22:20 PST
TextResourceDecoder fails to skip the BOM when it is reused.
Antti Koivisto
Comment 3 2008-11-08 17:21:32 PST
Sam Weinig
Comment 4 2008-11-08 19:07:52 PST
Comment on attachment 24998 [details] patch r=me
Antti Koivisto
Comment 5 2008-11-08 21:02:08 PST
Sending LayoutTests/ChangeLog Adding LayoutTests/fast/encoding/css-cached-bom-expected.txt Adding LayoutTests/fast/encoding/css-cached-bom.html Adding LayoutTests/fast/encoding/resources/css-cached-bom-frame.html Adding (bin) LayoutTests/fast/encoding/resources/utf-16-little-endian.css Sending WebCore/ChangeLog Sending WebCore/loader/TextResourceDecoder.cpp Transmitting file data ....... Committed revision 38240.
Note You need to log in before you can comment on or make changes to this bug.