WebCore:

2008-11-08  Antti Koivisto  <antti@apple.com>

        Reviewed by Sam Weinig.

        Fix https://bugs.webkit.org/show_bug.cgi?id=22141
        REGRESSION: Safari error page is not fully styled when loaded from cache

        Reset text decoder on flush so it does not pass through the BOM when it is reused.

        Test: fast/encoding/css-cached-bom.html

        * loader/TextResourceDecoder.cpp:
        (WebCore::TextResourceDecoder::flush):

LayoutTests:

2008-11-08  Antti Koivisto  <antti@apple.com>

        Reviewed by Sam Weinig.

        Test for https://bugs.webkit.org/show_bug.cgi?id=22141
        REGRESSION: Safari error page is not fully styled when loaded from cache

        * fast/encoding/css-cached-bom.html: Added.
        * fast/encoding/css-cached-bom-expected.txt: Added.
        * fast/encoding/resources/css-cached-bom-frame.html: Added.
        * fast/encoding/resources/utf-16-little-endian.css: Added.



Canonical link: https://commits.webkit.org/30458@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38240 268f45cc-cd09-0410-ab3c-d52691b4dbfc